# wappiz

./: .bazelignore  .bazelrc  .gitignore  .goreleaser.yaml  .oxfmtrc.jsonc  .oxlintrc.json  AGENTS.md  BUILD.bazel  MODULE.bazel  Makefile  go.mod  go.sum  main.go  package.json  skills-lock.json  turbo.json
cmd/api/: BUILD.bazel
internal/events/: BUILD.bazel  events.go  events_test.go  payloads.go  publisher.go
internal/events/handlers/: BUILD.bazel  appointment_canceled_email.go  appointment_canceled_email_test.go  appointment_created_email.go  appointment_created_email_test.go  appointment_rescheduled_email.go  appointment_rescheduled_email_test.go  appointment_rescheduled_whatsapp.go
internal/jobs/: BUILD.bazel  cleanup_sessions.go  event_dispatcher_job.go  event_dispatcher_job_test.go  no_show_tracker.go  no_show_tracker_test.go  reminder.go
internal/jobs/cleanup_sessions_job/: BUILD.bazel
internal/jobs/no_show_tracker_job/: BUILD.bazel
internal/jobs/reminder_job/: BUILD.bazel  job.go
internal/services/slot_finder/: BUILD.bazel
internal/services/slotfinder/: BUILD.bazel  interface.go  resolve.go  resolve_test.go  service.go
internal/services/state_machine/: BUILD.bazel  advance_to_confirm_or_name.go  advance_to_custom_fields_or_confirm.go  handle_awaiting_name.go  handle_cancel_confirm.go  handle_cancel_flow.go  handle_capture_field.go  handle_confirm.go  handle_my_appointments.go  interface.go  process.go  record_flow_field_responses.go  send_appointment_confirmed.go  send_confirmation.go  validate_and_find_slots.go
internal/services/webhook_processor/: BUILD.bazel
internal/services/webhookprocessor/: BUILD.bazel  interface.go  service.go
pkg/buildinfo/: BUILD.bazel  metrcis.go
pkg/clock/: BUILD.bazel
pkg/counter/: BUILD.bazel  redis.go  redis_test.go
pkg/crypto/: BUILD.bazel
pkg/db/: BUILD.bazel  appointment_field_responses_find_latest_one_time.sql_generated.go  appointment_field_responses_insert.sql_generated.go  appointments_find_by_resource_in_range.sql_generated.go  appointments_has_customer_overlap_excluding_appointment.sql_generated.go  appointments_reschedule.sql_generated.go  conversation_sessions_insert_when_inactive.sql_generated.go  database.go  domain_event_handler_completions_find.sql_generated.go  domain_event_handler_completions_insert.sql_generated.go  domain_events_claim_pending.sql_generated.go  domain_events_insert.sql_generated.go  domain_events_mark_failed.sql_generated.go  domain_events_mark_processed.sql_generated.go  domain_events_renew_claim.sql_generated.go  models_generated.go  querier_generated.go  replica.go  schedule_overrides_find_by_resource.sql_generated.go  schedule_overrides_insert.sql_generated.go  sqlc.json  tenant_flow_fields_create_predefined_fields.sql_generated.go  tenant_flow_fields_find_by_tenant.sql_generated.go  tenant_flow_fields_find_enabled.sql_generated.go  tenant_flow_fields_insert.sql_generated.go  tenant_flow_fields_insert_custom.sql_generated.go  tenant_flow_fields_update.sql_generated.go  tenants_find_owner_email.sql_generated.go  tenants_update_appointment_count.sql_generated.go  working_hours_delete_by_resource.sql_generated.go  working_hours_insert.sql_generated.go
pkg/db/queries/: appointment_field_responses_find_latest_one_time.sql  appointment_field_responses_insert.sql  appointments_find_by_resource_in_range.sql  appointments_has_customer_overlap_excluding_appointment.sql  appointments_reschedule.sql  conversation_sessions_insert_when_inactive.sql  domain_event_handler_completions_find.sql  domain_event_handler_completions_insert.sql  domain_events_claim_pending.sql  domain_events_insert.sql  domain_events_mark_failed.sql  domain_events_mark_processed.sql  domain_events_renew_claim.sql  schedule_overrides_find_by_resource.sql  schedule_overrides_insert.sql  tenant_flow_fields_create_predefined_fields.sql  tenant_flow_fields_find_by_tenant.sql  tenant_flow_fields_find_enabled.sql  tenant_flow_fields_insert.sql  tenant_flow_fields_insert_custom.sql  tenant_flow_fields_update.sql  tenants_find_owner_email.sql  tenants_update_appointment_count.sql  working_hours_delete_by_resource.sql  working_hours_insert.sql
pkg/db/schema/: 000_types.sql  accounts.sql  appointment_field_responses.sql  appointment_penalty_events.sql  appointment_reminder_events.sql  appointment_status_history.sql  appointments.sql  conversation_sessions.sql  customers.sql  domain_event_handler_completions.sql  domain_events.sql  jwks.sql  onboarding_progress.sql  plans.sql  resource_services.sql  resources.sql  schedule_overrides.sql  services.sql  sessions.sql  subscription_orders.sql  subscriptions.sql  tenant_flow_fields.sql  tenant_users.sql  tenant_whatsapp_configs.sql  tenants.sql  users.sql  verifications.sql  working_hours.sql
pkg/jwt/: BUILD.bazel  jwt.go  verifier.go  verifier_test.go
pkg/logger/: BUILD.bazel
pkg/mailer/: BUILD.bazel  interface.go  mailer.go  mailer_test.go
pkg/prometheus/: BUILD.bazel
pkg/prometheus/lazy/: BUILD.bazel  doc.go
pkg/prometheus/metrics/: BUILD.bazel  panic.go
pkg/server/: BUILD.bazel  middleware_cors.go  middleware_logger.go  middleware_ratelimit.go  middleware_request_id.go  request_util.go
pkg/uid/: BUILD.bazel
pkg/whatsapp/: BUILD.bazel
svc/api/: BUILD.bazel  config.go  run.go
svc/api/internal/middleware/: BUILD.bazel  errors.go
svc/api/internal/testutil/: BUILD.bazel  db.go
svc/api/openapi/: BUILD.bazel  common.go
svc/api/routes/: BUILD.bazel  register.go  services.go
svc/api/routes/v1/admin_activate_tenant/: BUILD.bazel  handler.go
svc/api/routes/v1/admin_find_pending_activations/: BUILD.bazel  handler.go
svc/api/routes/v1/admin_reject_tenant/: BUILD.bazel  handler.go
svc/api/routes/v1/appointments_create/: BUILD.bazel  handler.go
svc/api/routes/v1/appointments_get_status_history/: BUILD.bazel  handler.go
svc/api/routes/v1/appointments_reschedule/: BUILD.bazel  handler.go
svc/api/routes/v1/appointments_search/: BUILD.bazel  handler.go
svc/api/routes/v1/appointments_update_status/: BUILD.bazel  handler.go
web/: package.json  (+1 more)
(+262 files in other folders)
