load("@gazelle//:def.bzl", "gazelle")
load("@rules_go//go:def.bzl", "go_binary", "go_library")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")

# gazelle:exclude .claude

gazelle(name = "gazelle")

go_library(
    name = "wappiz_lib",
    srcs = ["main.go"],
    importpath = "wappiz",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/logger",
        "//svc/api",
    ],
)

go_binary(
    name = "wappiz",
    out = "bin/wappiz",
    embed = [":wappiz_lib"],
    pure = "on",
    visibility = ["//visibility:public"],
)

go_binary(
    name = "wappiz_linux_amd64",
    out = "bin/wappiz",
    embed = [":wappiz_lib"],
    goarch = "amd64",
    goos = "linux",
    pure = "on",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "wappiz_linux_arm64",
    out = "bin/wappiz",
    embed = [":wappiz_lib"],
    goarch = "arm64",
    goos = "linux",
    pure = "on",
    visibility = ["//visibility:private"],
)

pkg_tar(
    name = "wappiz_tar",
    srcs = select({
        "@platforms//cpu:arm64": [":wappiz_linux_arm64"],
        "@platforms//cpu:x86_64": [":wappiz_linux_amd64"],
        "//conditions:default": [":wappiz_linux_amd64"],
    }),
    package_dir = "/",
    strip_prefix = "bin",
)
