bazel_dep(name = "rules_go", version = "0.59.0")
bazel_dep(name = "gazelle", version = "0.47.0")
bazel_dep(name = "rules_oci", version = "2.2.7")
bazel_dep(name = "rules_pkg", version = "1.1.0")
bazel_dep(name = "platforms", version = "1.0.0")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")

# Download an SDK for the host OS & architecture as well as common remote execution
# platforms, using the version given from the `go.mod` file.
go_sdk.from_file(go_mod = "//:go.mod")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
go_deps.gazelle_default_attributes(
    directives = [
        "gazelle:proto disable",  # we are generating code from protos already
    ],
)
use_repo(
    go_deps,
    "com_github_gin_contrib_cors",
    "com_github_gin_gonic_gin",
    "com_github_golang_jwt_jwt_v5",
    "com_github_google_uuid",
    "com_github_jackc_pgx_v5",
    "com_github_joho_godotenv",
    "com_github_lib_pq",
    "com_github_prometheus_client_golang",
    "com_github_prometheus_common",
    "com_github_resend_resend_go_v3",
    "com_github_shirou_gopsutil_v4",
    "com_github_sqlc_dev_sqlc",
    "com_github_stretchr_testify",
    "io_opentelemetry_go_contrib_bridges_otelslog",
    "io_opentelemetry_go_contrib_bridges_prometheus",
    "io_opentelemetry_go_contrib_instrumentation_github_com_gin_gonic_gin_otelgin",
    "io_opentelemetry_go_contrib_processors_minsev",
    "io_opentelemetry_go_otel",
    "io_opentelemetry_go_otel_exporters_otlp_otlplog_otlploghttp",
    "io_opentelemetry_go_otel_exporters_otlp_otlpmetric_otlpmetrichttp",
    "io_opentelemetry_go_otel_exporters_otlp_otlptrace_otlptracehttp",
    "io_opentelemetry_go_otel_metric",
    "io_opentelemetry_go_otel_sdk",
    "io_opentelemetry_go_otel_sdk_log",
    "io_opentelemetry_go_otel_sdk_metric",
    "io_opentelemetry_go_otel_trace",
)
