load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "events",
    srcs = [
        "events.go",
        "payloads.go",
        "publisher.go",
    ],
    importpath = "wappiz/internal/events",
    visibility = ["//:__subpackages__"],
    deps = [
        "//pkg/db",
        "//pkg/fault",
        "//pkg/logger",
        "@com_github_google_uuid//:uuid",
    ],
)
