load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "jobs",
    srcs = [
        "cleanup_sessions.go",
        "event_dispatcher_job.go",
        "interface.go",
        "no_show_tracker.go",
        "reminder.go",
    ],
    importpath = "wappiz/internal/jobs",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/events",
        "//pkg/crypto",
        "//pkg/datetime",
        "//pkg/db",
        "//pkg/events/metrics",
        "//pkg/fault",
        "//pkg/logger",
        "//pkg/whatsapp",
        "@com_github_google_uuid//:uuid",
        "@com_github_jackc_pgx_v5//:pgx",
    ],
)

go_test(
    name = "jobs_test",
    srcs = ["no_show_tracker_test.go"],
    embed = [":jobs"],
)
