load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "buildinfo",
    srcs = [
        "buildinfo.go",
        "metrcis.go",
    ],
    importpath = "wappiz/pkg/buildinfo",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/prometheus/lazy",
        "@com_github_prometheus_client_golang//prometheus",
    ],
)
