load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "clock",
    srcs = [
        "doc.go",
        "interface.go",
        "real_clock.go",
        "test_clock.go",
    ],
    importpath = "wappiz/pkg/clock",
    visibility = ["//visibility:public"],
)

go_test(
    name = "clock_test",
    srcs = [
        "real_clock_test.go",
        "test_clock_test.go",
    ],
    embed = [":clock"],
    deps = ["@com_github_stretchr_testify//require"],
)
