load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "crypto",
    srcs = [
        "crypto.go",
        "service.go",
    ],
    importpath = "wappiz/pkg/crypto",
    visibility = ["//visibility:public"],
)

go_test(
    name = "crypto_test",
    srcs = ["service_test.go"],
    embed = [":crypto"],
)
