load("@rules_go//go:def.bzl", "go_library")

exports_files(["schema.sql"], visibility = ["//visibility:public"])

go_library(
    name = "db",
    srcs = [
        "appointment_penalty_events_find_customer_incidents.sql_generated.go",
        "appointment_penalty_events_insert.sql_generated.go",
        "appointment_reminder_events_claim_due.sql_generated.go",
        "appointment_reminder_events_find_pending.sql_generated.go",
        "appointment_reminder_events_mark_failed.sql_generated.go",
        "appointment_reminder_events_mark_sent.sql_generated.go",
        "appointment_status_history_find.sql_generated.go",
        "appointment_status_history_insert.sql_generated.go",
        "appointments_find_by_customer_id.sql_generated.go",
        "appointments_find_by_id.sql_generated.go",
        "appointments_find_resource_occupied_slots.sql_generated.go",
        "appointments_find_unattended.sql_generated.go",
        "appointments_find_upcoming.sql_generated.go",
        "appointments_has_customer_overlap.sql_generated.go",
        "appointments_insert.sql_generated.go",
        "appointments_mark_reminder_sent.sql_generated.go",
        "appointments_mark_reminder_sent_by_type.sql_generated.go",
        "appointments_mark_unattended_no_show.sql_generated.go",
        "appointments_recently_cancelled.sql_generated.go",
        "appointments_search.sql_generated.go",
        "appointments_update.sql_generated.go",
        "conversation_sessions_delete.sql_generated.go",
        "conversation_sessions_delete_expired.sql_generated.go",
        "conversation_sessions_find_active_by_customer.sql_generated.go",
        "conversation_sessions_insert.sql_generated.go",
        "conversation_sessions_update.sql_generated.go",
        "custom_types.go",
        "customers_block.sql_generated.go",
        "customers_count_late_cancels.sql_generated.go",
        "customers_count_no_shows.sql_generated.go",
        "customers_find_by_id.sql_generated.go",
        "customers_find_by_phone_number.sql_generated.go",
        "customers_find_by_tenant.sql_generated.go",
        "customers_increment_late_cancels.sql_generated.go",
        "customers_increment_late_cancels_batch.sql_generated.go",
        "customers_increment_no_shows.sql_generated.go",
        "customers_increment_no_shows_batch.sql_generated.go",
        "customers_insert.sql_generated.go",
        "customers_penalty_counts.sql_generated.go",
        "customers_unblock.sql_generated.go",
        "customers_update.sql_generated.go",
        "database.go",
        "doc.go",
        "generate.go",
        "interface.go",
        "jwks_find_by_id.sql_generated.go",
        "models_generated.go",
        "onboarding_progress_advance_step.sql_generated.go",
        "onboarding_progress_complete.sql_generated.go",
        "onboarding_progress_find_by_tenant.sql_generated.go",
        "onboarding_progress_insert.sql_generated.go",
        "plans_find_by_external_id.sql_generated.go",
        "plans_list_active.sql_generated.go",
        "querier_generated.go",
        "queries.go",
        "replica.go",
        "resource_services_delete.sql_generated.go",
        "resource_services_insert.sql_generated.go",
        "resources_count_by_tenant.sql_generated.go",
        "resources_delete.sql_generated.go",
        "resources_find_by_id.sql_generated.go",
        "resources_find_by_service_id.sql_generated.go",
        "resources_find_by_tenant.sql_generated.go",
        "resources_insert.sql_generated.go",
        "resources_update.sql_generated.go",
        "schedule_overrides_delete.sql_generated.go",
        "schedule_overrides_find_by_resource.sql_generated.go",
        "schedule_overrides_insert.sql_generated.go",
        "services_delete.sql_generated.go",
        "services_find_by_id.sql_generated.go",
        "services_find_by_resource_id.sql_generated.go",
        "services_find_by_tenant.sql_generated.go",
        "services_find_with_assigned_resource.sql_generated.go",
        "services_insert.sql_generated.go",
        "services_update.sql_generated.go",
        "tenant_flow_fields_create_predefined_fields.sql_generated.go",
        "tenant_flow_fields_find_by_tenant.sql_generated.go",
        "tenant_flow_fields_find_enabled.sql_generated.go",
        "tenant_flow_fields_insert_custom.sql_generated.go",
        "tenant_flow_fields_insert.sql_generated.go",
        "tenant_flow_fields_toggle.sql_generated.go",
        "tenant_flow_fields_update.sql_generated.go",
        "tenant_users_link_tenant_user.sql_generated.go",
        "tenant_whatsapp_configs_activate.sql_generated.go",
        "tenant_whatsapp_configs_find_by_phone_number_id.sql_generated.go",
        "tenant_whatsapp_configs_find_by_tenant.sql_generated.go",
        "tenant_whatsapp_configs_find_pending_activations.sql_generated.go",
        "tenant_whatsapp_configs_insert.sql_generated.go",
        "tenant_whatsapp_configs_update.sql_generated.go",
        "tenants_find_active_plan.sql_generated.go",
        "tenants_find_by_id.sql_generated.go",
        "tenants_find_by_slug.sql_generated.go",
        "tenants_find_by_user_id.sql_generated.go",
        "tenants_insert.sql_generated.go",
        "tenants_reject_pending_activation.sql_generated.go",
        "tenants_update.sql_generated.go",
        "tenants_update_appointment_count.sql_generated.go",
        "traced_tx.go",
        "tx.go",
        "working_hours_delete.sql_generated.go",
        "working_hours_find_by_resource.sql_generated.go",
        "working_hours_upsert.sql_generated.go",
    ],
    importpath = "wappiz/pkg/db",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/assert",
        "//pkg/codes",
        "//pkg/fault",
        "//pkg/logger",
        "//pkg/otel/tracing",
        "//pkg/pg/metrics",
        "@com_github_google_uuid//:uuid",
        "@com_github_jackc_pgx_v5//:pgx",
        "@com_github_jackc_pgx_v5//stdlib",
        "@com_github_lib_pq//:pq",
        "@io_opentelemetry_go_otel//attribute",
    ],
)
