load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "jwt",
    srcs = [
        "jwt.go",
        "verifier.go",
    ],
    importpath = "wappiz/pkg/jwt",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/db",
        "//pkg/logger",
        "//svc/api/openapi",
        "@com_github_gin_gonic_gin//:gin",
        "@com_github_golang_jwt_jwt_v5//:jwt",
        "@com_github_google_uuid//:uuid",
    ],
)
