load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "logger",
    srcs = [
        "doc.go",
        "event.go",
        "global.go",
        "multihandler.go",
        "sampler.go",
        "slog.go",
        "wide.go",
    ],
    importpath = "wappiz/pkg/logger",
    visibility = ["//visibility:public"],
)
