load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "mailer",
    srcs = [
        "doc.go",
        "interface.go",
        "mailer.go",
    ],
    importpath = "wappiz/pkg/mailer",
    visibility = ["//visibility:public"],
    deps = ["@com_github_resend_resend_go_v3//:resend-go"],
)
