load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "prometheus",
    srcs = ["server.go"],
    importpath = "wappiz/pkg/prometheus",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_gin_gonic_gin//:gin",
        "@com_github_prometheus_client_golang//prometheus",
        "@com_github_prometheus_client_golang//prometheus/promhttp",
    ],
)
