load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "server",
    srcs = [
        "handler.go",
        "middleware_cors.go",
        "middleware_logger.go",
        "middleware_ratelimit.go",
        "middleware_request_id.go",
        "request_util.go",
        "route.go",
        "server.go",
    ],
    importpath = "wappiz/pkg/server",
    visibility = ["//visibility:public"],
    deps = [
        "//internal/services/ratelimit",
        "//pkg/codes",
        "//pkg/fault",
        "//pkg/logger",
        "//pkg/uid",
        "@com_github_gin_contrib_cors//:cors",
        "@com_github_gin_gonic_gin//:gin",
    ],
)
