load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "uid",
    srcs = [
        "doc.go",
        "new.go",
        "prefix.go",
        "secure.go",
    ],
    importpath = "wappiz/pkg/uid",
    visibility = ["//visibility:public"],
)

go_test(
    name = "uid_test",
    srcs = [
        "benchmark_test.go",
        "new_test.go",
    ],
    embed = [":uid"],
)
