load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "api",
    srcs = [
        "config.go",
        "run.go",
    ],
    importpath = "wappiz/svc/api",
    visibility = ["//visibility:public"],
    deps = [
        "//internal/jobs/cleanup_sessions_job",
        "//internal/jobs/no_show_tracker_job",
        "//internal/jobs/reminder_job",
        "//internal/services/ratelimit",
        "//internal/services/slot_finder",
        "//internal/services/state_machine",
        "//internal/services/webhook_processor",
        "//pkg/buildinfo",
        "//pkg/clock",
        "//pkg/counter",
        "//pkg/crypto",
        "//pkg/db",
        "//pkg/jwt",
        "//pkg/logger",
        "//pkg/mailer",
        "//pkg/otel",
        "//pkg/prometheus",
        "//pkg/prometheus/lazy",
        "//pkg/runner",
        "//pkg/whatsapp",
        "//svc/api/internal/middleware",
        "//svc/api/routes",
        "@com_github_gin_gonic_gin//:gin",
        "@com_github_google_uuid//:uuid",
        "@com_github_joho_godotenv//:godotenv",
        "@com_github_prometheus_client_golang//prometheus",
        "@com_github_prometheus_client_golang//prometheus/collectors",
        "@com_github_prometheus_common//version",
        "@io_opentelemetry_go_contrib_instrumentation_github_com_gin_gonic_gin_otelgin//:otelgin",
    ],
)
