load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "handlers",
    srcs = ["appointment_created_email.go"],
    importpath = "wappiz/internal/events/handlers",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/events",
        "//pkg/db",
        "//pkg/fault",
        "//pkg/mailer",
    ],
)

go_test(
    name = "handlers_test",
    srcs = ["appointment_created_email_test.go"],
    embed = [":handlers"],
    deps = ["@com_github_stretchr_testify//require"],
)
