load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "handlers",
    srcs = [
        "appointment_canceled_email.go",
        "appointment_created_email.go",
        "appointment_rescheduled_email.go",
        "appointment_rescheduled_whatsapp.go",
    ],
    importpath = "wappiz/internal/events/handlers",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/events",
        "//pkg/crypto",
        "//pkg/datetime",
        "//pkg/db",
        "//pkg/fault",
        "//pkg/mailer",
        "//pkg/whatsapp",
    ],
)

go_test(
    name = "handlers_test",
    srcs = [
        "appointment_canceled_email_test.go",
        "appointment_created_email_test.go",
        "appointment_rescheduled_email_test.go",
    ],
    embed = [":handlers"],
    deps = ["@com_github_stretchr_testify//require"],
)
