load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "cleanup_sessions_job",
    srcs = [
        "interface.go",
        "job.go",
    ],
    importpath = "wappiz/internal/jobs/cleanup_sessions_job",
    visibility = ["//:__subpackages__"],
    deps = [
        "//pkg/db",
        "//pkg/logger",
    ],
)
