load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "slotfinder",
    srcs = [
        "interface.go",
        "resolve.go",
        "service.go",
    ],
    importpath = "wappiz/internal/services/slotfinder",
    visibility = ["//:__subpackages__"],
    deps = [
        "//pkg/db",
        "@com_github_google_uuid//:uuid",
    ],
)

go_test(
    name = "slotfinder_test",
    srcs = ["resolve_test.go"],
    embed = [":slotfinder"],
    deps = [
        "//pkg/db",
        "@com_github_google_uuid//:uuid",
        "@com_github_stretchr_testify//require",
    ],
)
