load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "state_machine",
    srcs = [
        "advance_to_confirm_or_name.go",
        "advance_to_custom_fields_or_confirm.go",
        "common.go",
        "filter_slots_by_customer_availability.go",
        "handle_awaiting_name.go",
        "handle_cancel_confirm.go",
        "handle_cancel_execute.go",
        "handle_cancel_flow.go",
        "handle_capture_field.go",
        "handle_confirm.go",
        "handle_entry.go",
        "handle_my_appointments.go",
        "handle_overlap_on_confirm.go",
        "handle_select_date.go",
        "handle_select_resource.go",
        "handle_select_service.go",
        "handle_select_time.go",
        "has_customer_overlap.go",
        "interface.go",
        "process.go",
        "record_flow_field_responses.go",
        "send_appointment_confirmed.go",
        "send_confirmation.go",
        "send_date_prompt.go",
        "send_resource_list.go",
        "send_service_list.go",
        "send_slot_list.go",
        "service.go",
        "slot_id.go",
        "update_session.go",
        "validate_and_find_slots.go",
        "validate_service.go",
    ],
    importpath = "wappiz/internal/services/state_machine",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/services/slot_finder",
        "//pkg/date_formatter",
        "//pkg/date_parser",
        "//pkg/db",
        "//pkg/errors",
        "//pkg/fault",
        "//pkg/logger",
        "//pkg/whatsapp",
        "@com_github_google_uuid//:uuid",
    ],
)
