load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "routes",
    srcs = [
        "register.go",
        "services.go",
    ],
    importpath = "wappiz/svc/api/routes",
    visibility = ["//visibility:public"],
    deps = [
        "//internal/events",
        "//internal/services/ratelimit",
        "//internal/services/slotfinder",
        "//internal/services/statemachine",
        "//internal/services/webhookprocessor",
        "//pkg/crypto",
        "//pkg/db",
        "//pkg/jwt",
        "//pkg/mailer",
        "//pkg/server",
        "//pkg/whatsapp",
        "//svc/api/internal/middleware",
        "//svc/api/routes/v1/admin_activate_tenant",
        "//svc/api/routes/v1/admin_find_pending_activations",
        "//svc/api/routes/v1/admin_reject_tenant",
        "//svc/api/routes/v1/appointments_create",
        "//svc/api/routes/v1/appointments_get_status_history",
        "//svc/api/routes/v1/appointments_reschedule",
        "//svc/api/routes/v1/appointments_search",
        "//svc/api/routes/v1/appointments_update_status",
        "//svc/api/routes/v1/customers_block",
        "//svc/api/routes/v1/customers_get",
        "//svc/api/routes/v1/customers_get_incidents",
        "//svc/api/routes/v1/customers_list",
        "//svc/api/routes/v1/customers_unblock",
        "//svc/api/routes/v1/onboarding_get_progress",
        "//svc/api/routes/v1/onboarding_get_templates",
        "//svc/api/routes/v1/onboarding_step_resource",
        "//svc/api/routes/v1/onboarding_step_services",
        "//svc/api/routes/v1/onboarding_step_whatsapp",
        "//svc/api/routes/v1/plans_get_by_external_id",
        "//svc/api/routes/v1/plans_list_active",
        "//svc/api/routes/v1/resources_assign_services",
        "//svc/api/routes/v1/resources_create",
        "//svc/api/routes/v1/resources_create_override",
        "//svc/api/routes/v1/resources_delete",
        "//svc/api/routes/v1/resources_delete_override",
        "//svc/api/routes/v1/resources_delete_working_hours",
        "//svc/api/routes/v1/resources_get",
        "//svc/api/routes/v1/resources_get_services",
        "//svc/api/routes/v1/resources_list",
        "//svc/api/routes/v1/resources_list_overrides",
        "//svc/api/routes/v1/resources_update",
        "//svc/api/routes/v1/resources_update_sort_order",
        "//svc/api/routes/v1/resources_upsert_working_hours",
        "//svc/api/routes/v1/services_create",
        "//svc/api/routes/v1/services_list",
        "//svc/api/routes/v1/services_update",
        "//svc/api/routes/v1/tenant_flow_fields_create",
        "//svc/api/routes/v1/tenant_flow_fields_list",
        "//svc/api/routes/v1/tenant_flow_fields_toggle",
        "//svc/api/routes/v1/tenant_flow_fields_update",
        "//svc/api/routes/v1/tenants_create",
        "//svc/api/routes/v1/tenants_get_by_user",
        "//svc/api/routes/v1/tenants_get_current",
        "//svc/api/routes/v1/tenants_update",
        "//svc/api/routes/v1/webhooks_process_webhook",
        "//svc/api/routes/v1/webhooks_verify_webhook",
        "@com_github_gin_gonic_gin//:gin",
    ],
)
